--- a/index.html
+++ b/index.html
@@ -6,37 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container">
-        <div class="calculadora">
-            <div class="display">
-                <div id="valor-anterior"></div>
-                <div id="valor-actual"></div>
-            </div>
-            <button class="col-2">C</button>
-            <button>&larr;</button>
-            <button class="numero">%</button>
-            <button class="numero">7</button>
-            <button class="numero">8</button>
-            <button class="numero">9</button>
-            <button class="operador">X</button>
-            <button class="numero">4</button>
-            <button class="numero">5</button>
-            <button class="numero">6</button>
-            <button class="operador">-</button>
-            <button class="numero">1</button>
-            <button class="numero">2</button>
-            <button class="numero">3</button>
-            <button class="operador">+</button>
-            <button class="col-2 numero">0</button>
-            <button class="numero">.</button>
-            <button class="o">=</button>
-        </div>
+    <div id="calculator">
+        <div class="pantalla">00</div>
+        <button id="c" class="btn">C</button>
+        <button id="clear" class="btn">←</button>
+        <button class="btn">/</button>
+        <button class="btn">*</button>
+        <button class="btn">7</button>
+        <button class="btn">8</button>
+        <button class="btn">9</button>
+        <button class="btn">-</button>
+        <button class="btn">4</button>
+        <button class="btn">5</button>
+        <button class="btn">6</button>
+        <button class="btn">+</button>
+        <button class="btn">1</button>
+        <button class="btn">2</button>
+        <button class="btn">3</button>
+        <button id="igual" class="btn">=</button>
+        <button id="cero" class="btn">0</button>
+        <button class="btn">.</button>
     </div>
+    <script src="./js/index.js"></script>
 </body>
-<script src="./js/index.js"></script>
 
 </html>
