--- a/index.html
+++ b/index.html
@@ -4,31 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora</title>
+    <title>Calculadora de Presupuesto</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <div id="calculator">
-        <div class="pantalla">00</div>
-        <button id="c" class="btn">C</button>
-        <button id="clear" class="btn">←</button>
-        <button class="btn">/</button>
-        <button class="btn">*</button>
-        <button class="btn">7</button>
-        <button class="btn">8</button>
-        <button class="btn">9</button>
-        <button class="btn">-</button>
-        <button class="btn">4</button>
-        <button class="btn">5</button>
-        <button class="btn">6</button>
-        <button class="btn">+</button>
-        <button class="btn">1</button>
-        <button class="btn">2</button>
-        <button class="btn">3</button>
-        <button id="igual" class="btn">=</button>
-        <button id="cero" class="btn">0</button>
-        <button class="btn">.</button>
+    <div class="container">
+        <h1>Simulador de Presupuesto</h1>
+        <form id="budget-form">
+            <label for="ingreso">Ingreso Mensual:</label>
+            <input type="number" id="ingreso" placeholder="Ingrese su ingreso mensual" required>
+
+            <label for="expensas">Gastos Mensuales:</label>
+            <input type="number" id="expensas" placeholder="Ingrese sus gastos mensuales" required>
+
+            <button type="button" onclick="calculateBudget()">Calcular Presupuesto</button>
+            <button type="reset">Limpiar</button>
+        </form>
+
+        <div id="result-container" style="display: none;">
+            <h2>Resultado:</h2>
+            <p id="result"></p>
+        </div>
     </div>
     <script src="./js/index.js"></script>
 </body>
