--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
     <div class="container">
         <h1>Simulador de Presupuesto</h1>
         <form id="budget-form">
-            <label for="ingreso">Ingreso Mensual:</label>
-            <input type="number" id="ingreso" placeholder="Ingrese su ingreso mensual" required>
+            <label for="price">Precio del Producto/Servicio:</label>
+            <input type="number" id="price" placeholder="Ingrese el precio" required>
 
-            <label for="expensas">Gastos Mensuales:</label>
-            <input type="number" id="expensas" placeholder="Ingrese sus gastos mensuales" required>
+            <label for="installments">Cuotas:</label>
+            <input type="number" id="installments" placeholder="Ingrese la cantidad de cuotas" required>
 
             <button type="button" onclick="calculateBudget()">Calcular Presupuesto</button>
             <button type="reset">Limpiar</button>
         </form>
-
         <div id="result-container" style="display: none;">
             <h2>Resultado:</h2>
             <p id="result"></p>
