--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <label for="installments">Cuotas:</label>
             <input type="number" id="installments" placeholder="Ingrese la cantidad de cuotas" required>
 
+            <label for="interest">Porcentaje de Interés:</label>
+            <input type="number" id="interest" placeholder="Ingrese el porcentaje de interés">
+
             <button type="button" onclick="calculateBudget()">Calcular Presupuesto</button>
             <button type="reset">Limpiar</button>
         </form>
