se actualiza la funcion calcular prestamo para que recorra ela array registro usando foreach y que las muestre

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button id="calculateButton">Calcular Prestamo</button>
         <button type="reset">Limpiar</button>
         <div id="error" class="error-message"></div>
-        </form>
+        <div id="UsuarioEntrada" class="UsuarioEntrada"></div>
         <div>
             <h2 id="result">Resultado : </h2>
         </div>
