se agrega libreria sweet alert , se cambian alertas , se agrega funcion para limpiar datos ingresados

--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
             <input type="number" id="deadlines" placeholder="Ingrese el plazo">
         </div>
         <button id="calculateButton">Calcular Prestamo</button>
-        <button type="reset">Limpiar</button>
+        <button id="clearButton">Limpiar Registros</button>
         <div id="error" class="error-message"></div>
         <div id="UsuarioEntrada" class="UsuarioEntrada"></div>
         <div>
             <h2 id="result">Resultado : </h2>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/index.js"></script>
 </body>
 
